force-app/main/default/objects/Case/fields/Case_Creator__c.field-meta.xml
<CustomField>
    <fullName>Case_Creator__c</fullName>
    <formula>CreatedBy.FirstName &amp;&quot; &quot;&amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Creator</label>
    <type>Text</type>
</CustomField>