force-app/main/default/objects/Case/fields/geopointe__Geocode__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Geocode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
    <label>Geocode</label>
    <referenceTo>geopointe__Geocode__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>