force-app/main/default/objects/Case/fields/Group_Affected__c.field-meta.xml
<CustomField>
    <fullName>Group_Affected__c</fullName>
    <label>Group Affected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cycle</fullName>
            </value>
            <value>
                <fullName>Laundry Service</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Talent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>